--- a/contorno1.html
+++ b/contorno1.html
@@ -5,7 +5,7 @@
  </head>
 
  <body>
-<IMG SRC="../images/uno.png" USEMAP="#uno.png" WIDTH=111 HEIGHT=227 BORDER=0>
+<IMG SRC="./images/uno.png" USEMAP="#uno.png" WIDTH=111 HEIGHT=227 BORDER=0>
 <MAP NAME="uno.png">
 <AREA SHAPE=CIRCLE COORDS="20,75,18" onmouseover="this.bgcolor='green'">
 <AREA SHAPE=CIRCLE COORDS="47,55,18">
