changes in contorno html

--- a/contorno1.html
+++ b/contorno1.html
@@ -5,17 +5,26 @@
  </head>
 
  <body>
-<IMG SRC="./images/uno.png" USEMAP="#uno.png" WIDTH=111 HEIGHT=227 BORDER=0>
+<IMG SRC="./images/uno.png" USEMAP="#uno.png" WIDTH=111 HEIGHT=227 BORDER=0 style="position:asolute;">
+<IMG SRC="./images/uno01.png" style="position:absolute;left:8px;top:58px;visibility:hidden" id="pri">
+<IMG SRC="./images/uno02.png" style="position:absolute;left:30px;top:39px;visibility:hidden" id="seg">
+<IMG SRC="./images/uno03.png" style="position:absolute;left:53px;top:17px;visibility:hidden" id="ter">
+<IMG SRC="./images/uno04.png" style="position:absolute;left:75px;visibility:hidden" id="cua">
+<IMG SRC="./images/uno05.png" style="position:absolute;left:76px;top:39px;visibility:hidden" id="qui">
+<IMG SRC="./images/uno06.png" style="position:absolute;left:75px;top:82px;visibility:hidden" id="ses">
+<IMG SRC="./images/uno07.png" style="position:absolute;left:76px;top:113px;visibility:hidden" id="sep">
+<IMG SRC="./images/uno08.png" style="position:absolute;left:75px;top:144px;visibility:hidden" id="oct">
+<IMG SRC="./images/uno09.png" style="position:absolute;left:75px;top:187px;visibility:hidden" id="nov">
 <MAP NAME="uno.png">
-<AREA SHAPE=CIRCLE COORDS="20,75,18" onmouseover="this.bgcolor='green'">
-<AREA SHAPE=CIRCLE COORDS="47,55,18">
-<AREA SHAPE=CIRCLE COORDS="74,33,18">
-<AREA SHAPE=CIRCLE COORDS="90,23,18">
-<AREA SHAPE=CIRCLE COORDS="87,92,21">
-<AREA SHAPE=CIRCLE COORDS="88,54,21">
-<AREA SHAPE=CIRCLE COORDS="87,134,21">
-<AREA SHAPE=CIRCLE COORDS="87,175,21">
-<AREA SHAPE=CIRCLE COORDS="88,204,21">
+<AREA SHAPE=CIRCLE COORDS="20,75,18" onmouseover="pri.style.visibility='visible'" >
+<AREA SHAPE=CIRCLE COORDS="47,55,18" onmouseover="seg.style.visibility='visible'" >
+<AREA SHAPE=CIRCLE COORDS="74,33,18" onmouseover="ter.style.visibility='visible'" >
+<AREA SHAPE=CIRCLE COORDS="90,23,18" onmouseover="cua.style.visibility='visible'" >
+<AREA SHAPE=CIRCLE COORDS="87,92,21" onmouseover="qui.style.visibility='visible'" >
+<AREA SHAPE=CIRCLE COORDS="88,54,21" onmouseover="ses.style.visibility='visible'" >
+<AREA SHAPE=CIRCLE COORDS="87,134,21" onmouseover="sep.style.visibility='visible'" >
+<AREA SHAPE=CIRCLE COORDS="87,175,21" onmouseover="oct.style.visibility='visible'" >
+<AREA SHAPE=CIRCLE COORDS="88,204,21" onmouseover="nov.style.visibility='visible'" >
 </MAP>
  </body>
 </html>
