Correct usage of 'this' pointer
Useless id in the input buttons

--- a/minigames/numeros/cantidades.html
+++ b/minigames/numeros/cantidades.html
@@ -72,9 +72,9 @@
 
  <body>
     <div class="opciones">
-        <input type="button"    id="ba" value="1" class="boton" onclick="comprobar(ba.value)">
-        <input type="button"    id="bb" value="2" class="boton" onclick="comprobar(bb.value)">
-        <input type="button"    id="bc" value="3" class="boton" onclick="comprobar(bc.value)">
+        <input type="button" value="1" class="boton" onclick="comprobar(this.value)">
+        <input type="button" value="2" class="boton" onclick="comprobar(this.value)">
+        <input type="button" value="3" class="boton" onclick="comprobar(this.value)">
     </div>
     <div class="elementos">
         <img src="./images/gato.png" height="200" class="elem" id="a" alt="a"/>
