--- a/minigames/numeros/cantidades.html
+++ b/minigames/numeros/cantidades.html
@@ -35,28 +35,52 @@
             padding:20px;
         }
 </style>
-<script>      
-    
+<script>
+	var ran1,ran2,ran3;
+     imagenes=new Array();
+	 imagenes[0]="./images/gato.png";
+	 imagenes[1]="./images/canguro.png";
+	 imagenes[2]="./images/conejo.png";
+	 imagenes[3]="./images/leon.png";
+	 imagenes[4]="./images/perro.png";
+	 imagenes[5]="./images/pollito.png";
+	 //mostramos las imagenes seleccionadas aleatoriamente
+	 function vista()
+	 {
+		 ran1 = Math.round(Math.random()*5);
+		 //decidimos si vamos a mostrar o no
+		 mostrar=new Array();
+		 mostrar[0]=imagenes[ran1];
+		 mostrar[1]="./images/sero.png";
+		 //generar 2º y 3º random
+		 ran2 = Math.round(Math.random()*1);
+		 ran3 = Math.round(Math.random()*1);
+		 //asignamos a las imagenes sus valores aleatorios
+		 aimg.src=imagenes[ran1];
+		 bimg.src=mostrar[ran2];
+		 if(ran2==1)
+		 {
+			ran3=1;
+		 }
+		 cimg.src=mostrar[ran3];
+	 }
     function comprobar(NUM)
     {
             //comprobar num 1
-           if(document.getElementById("a").getAttribute("src") == "./images/gato.png" && 
-              document.getElementById("b").getAttribute("src") == "./images/sero.png" && 
+           if(document.getElementById("b").getAttribute("src") == "./images/sero.png" && 
               document.getElementById("c").getAttribute("src") == "./images/sero.png" && 
               NUM=="1")
            {
                window.alert("CORRECTO!");
            }
-           else if(document.getElementById("a").getAttribute("src") == "./images/gato.png" && 
-                   document.getElementById("b").getAttribute("src") == "./images/gato.png" && 
+           else if( document.getElementById("b").getAttribute("src") != "./images/sero.png" && 
                    document.getElementById("c").getAttribute("src") == "./images/sero.png" && 
                    NUM=="2")       //comprobar num 2
            {
                window.alert("CORRECTO!");
            }
-           else if(document.getElementById("a").getAttribute("src") == "./images/gato.png" && 
-                   document.getElementById("b").getAttribute("src") == "./images/gato.png" && 
-                   document.getElementById("c").getAttribute("src") == "./images/gato.png" && 
+           else if(document.getElementById("b").getAttribute("src") != "./images/sero.png" && 
+                   document.getElementById("c").getAttribute("src") != "./images/sero.png" && 
                     NUM=="3")  //comprobar num 3
            {
                window.alert("CORRECTO!");
@@ -70,16 +94,16 @@
 </script>
  </head>
 
- <body>
-    <div class="opciones">
+ <body onload="vista()">
+    <div class="opciones" >
         <input type="button" value="1" class="boton" onclick="comprobar(this.value)">
         <input type="button" value="2" class="boton" onclick="comprobar(this.value)">
         <input type="button" value="3" class="boton" onclick="comprobar(this.value)">
     </div>
     <div class="elementos">
-        <img src="./images/gato.png" height="200" class="elem" id="a" alt="a"/>
-        <img src="./images/gato.png" height="200" class="elem" id="b"/>
-        <img src="./images/gato.png" height="200" class="elem" id="c"/>
+        <img src="./images/sero.png" class="elem" id="a" name="aimg"/>
+        <img src="./images/sero.png" class="elem" id="b" name="bimg"/>
+        <img src="./images/sero.png" class="elem" id="c" name="cimg"/>
      </div>
  </body>
 </html>
