--- a/minigames/numeros/cantidadesInverso.html
+++ b/minigames/numeros/cantidadesInverso.html
@@ -62,17 +62,8 @@
 	 //mostramos las imagenes seleccionadas aleatoriamente
 	 function vista()
 	 {
-		ran1 = Math.round(Math.random()*5);
-		ran2 =	Math.round(Math.random()*2);
-		//si alguien conoce algun metodo para simplificar estas lineas que lo modifique
-		//solo dire que tienen la misma class
-		a1.src=imagenes[ran1];
-		a2.src=imagenes[ran1];
-		a3.src=imagenes[ran1];
-		a4.src=imagenes[ran1];
-		a5.src=imagenes[ran1];
-		a6.src=imagenes[ran1];
-		num.src=numeros[ran2];
+		a1.src = a2.src = a3.src = a4.src = a5.src = a6.src = imagenes[Math.round(Math.random()*5)];
+		num.src=numeros[Math.round(Math.random()*2)];
 	 }
 
 </script>
@@ -85,10 +76,10 @@
     <div class="elementos">
         <img src="./images/sero.png" class="elem" id="a" name="a1"/>
         <img src="./images/sero.png" class="elem" id="b" name="a2"/>
-        <img src="./images/sero.png" class="elem" id="c"  name="a3"/>
-		 <img src="./images/gato.png" class="elem" id="d" name="a4"/>
+        <img src="./images/sero.png" class="elem" id="c" name="a3"/>
+		<img src="./images/gato.png" class="elem" id="d" name="a4"/>
         <img src="./images/gato.png" class="elem" id="e" name="a5"/>
-		  <img src="./images/gato.png" class="elem" id="f" name="a6"/>
+		<img src="./images/gato.png" class="elem" id="f" name="a6"/>
      </div>
  </body>
 </html>
