--- a/Habitos/elBano.html
+++ b/Habitos/elBano.html
@@ -1,3 +1,4 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <HTML>
     <HEAD>
         <TITLE>El cuarto de baño</TITLE>
@@ -21,6 +22,8 @@ function pintar(obj)
  .imagen
 {
  position:absolute;
+ top:50px;
+ left:500px;
  width:416;
  height:512;
  padding:40;
@@ -41,21 +44,21 @@ function pintar(obj)
 <body bgcolor="yellow">
 
  <div class="cabezera">
-		<div class="titulo"><img src="imagenes2/titulo.gif" img></div>
+		<div class="titulo"><img src="imagenes/El Baño.gif" img></div>
 
  </div>
 
-<IMG SRC="./imagenes2/banoCompleto.png" class="imagen" USEMAP="#banoCompleto.png" WIDTH=416 HEIGHT=512 >
+<IMG SRC="./imagenes/banoCompleto.png" class="imagen" USEMAP="#banoCompleto.png" >
 
-<IMG SRC="./imagenes2/armario.gif" class="imagen" USEMAP="#banoCompleto.png" id="armario" style="display:none" >
-<IMG SRC="./imagenes2/cuadro.gif" class="imagen" USEMAP="#banoCompleto.png" id="cuadro" style="display:none">
-<IMG SRC="./imagenes2/toalla.gif" class="imagen" USEMAP="#banoCompleto.png" id="toalla" style="display:none">
-<IMG SRC="./imagenes2/bater.gif" class="imagen" USEMAP="#banoCompleto.png" id="bater" style="display:none">
-<IMG SRC="./imagenes2/espejo.gif" class="imagen" USEMAP="#banoCompleto.png" id="espejo" style="display:none">
-<IMG SRC="./imagenes2/cepilloDientes.gif" class="imagen" USEMAP="#banoCompleto.png" id="cepilloDientes" style="display:none">
-<IMG SRC="./imagenes2/alfombra.gif" class="imagen" USEMAP="#banoCompleto.png" id="alfombra" style="display:none">
-<IMG SRC="./imagenes2/patito.gif" class="imagen" USEMAP="#banoCompleto.png" id="patito" style="display:none">
-<IMG SRC="./imagenes2/barco.gif" class="imagen" USEMAP="#banoCompleto.png" id="barco" style="display:none">
+<IMG SRC="./imagenes/armario.gif" class="imagen" USEMAP="#banoCompleto.png" id="armario" style="display:none" >
+<IMG SRC="./imagenes/cuadro.gif" class="imagen" USEMAP="#banoCompleto.png" id="cuadro" style="display:none">
+<IMG SRC="./imagenes/toalla.gif" class="imagen" USEMAP="#banoCompleto.png" id="toalla" style="display:none">
+<IMG SRC="./imagenes/bater.gif" class="imagen" USEMAP="#banoCompleto.png" id="bater" style="display:none">
+<IMG SRC="./imagenes/espejo.gif" class="imagen" USEMAP="#banoCompleto.png" id="espejo" style="display:none">
+<IMG SRC="./imagenes/cepilloDientes.gif" class="imagen" USEMAP="#banoCompleto.png" id="cepilloDientes" style="display:none">
+<IMG SRC="./imagenes/alfombra.gif" class="imagen" USEMAP="#banoCompleto.png" id="alfombra" style="display:none">
+<IMG SRC="./imagenes/patito.gif" class="imagen" USEMAP="#banoCompleto.png" id="patito" style="display:none">
+<IMG SRC="./imagenes/barco.gif" class="imagen" USEMAP="#banoCompleto.png" id="barco" style="display:none">
 
 <MAP NAME="banoCompleto.png">
 <!-- armario -->
