--- a/Habitos/laCara.html
+++ b/Habitos/laCara.html
@@ -49,7 +49,7 @@ function pintar(obj)
 
  </div>
 
-<IMG SRC="./imagenes/caraCompleta.png" class="imagen" USEMAP="#caraCompleta.png" >
+<IMG SRC="./imagenes/caraCompleta.gif" class="imagen" USEMAP="#caraCompleta.png" >
 
 <IMG SRC="./imagenes/pelo.gif" class="imagen" USEMAP="#caraCompleta.png" id="pelo" style="display:none" >
 <IMG SRC="./imagenes/ojos.gif" class="imagen" USEMAP="#caraCompleta.png" id="ojos" style="display:none" >
