--- a/minigames/numeros/repaso contorno1.html
+++ b/minigames/numeros/repaso contorno1.html
@@ -35,7 +35,7 @@
 	}
     .contenedor
     {
-        width:111px;
+        height:227px;
         padding-left:23%;
         padding-top:8%;
     }
@@ -43,6 +43,8 @@
     {
 	position: absolute;
 	visibility: hidden;
+	width:111px;
+	cursor: url(./images/paloma.gif),url(./images/paloma.ani),auto;
 	}
 	.invisible1{left: 8.1%;}
 	.invisible2{left: 42.7%;}
@@ -50,7 +52,7 @@
 	.animal
 	{
 		height:100px;
-		margin-top:100%;
+		margin-top:30%;
 		margin-left:5%;
 	}
     body
@@ -95,7 +97,7 @@
  <!-- imagenes del 1 recorrido -->
   <div class="principal" id="primer">
      <div class="contenedor">
-         <IMG SRC="./images/uno.png" USEMAP="#uno.png" WIDTH=111 HEIGHT=227 BORDER=0 style="position:absolute;">
+         <IMG SRC="./images/uno.png" USEMAP="#uno.png" WIDTH=111 HEIGHT=227 BORDER=0 style="position:absolute;cursor: url(./images/paloma.gif),url(./images/paloma.ani),auto;">
          <IMG SRC="./images/uno01.png" ID="ele1" USEMAP="#uno.png" class="invisible1">
          <IMG SRC="./images/uno02.png" ID="ele2" USEMAP="#uno.png" class="invisible1">
          <IMG SRC="./images/uno03.png" ID="ele3" USEMAP="#uno.png" class="invisible1">
@@ -105,7 +107,7 @@
          <IMG SRC="./images/uno07.png" ID="ele7" USEMAP="#uno.png" class="invisible1">
          <IMG SRC="./images/uno08.png" ID="ele8" USEMAP="#uno.png" class="invisible1">
          <IMG SRC="./images/uno09.png" ID="ele9" USEMAP="#uno.png" class="invisible1">
-             <MAP NAME="uno.png" style="position:absolute;cursor:url(./images/paloma.ani);">
+             <MAP NAME="uno.png" style="position:absolute;cursor: url(./images/paloma.gif),url(./images/paloma.ani),auto;">
                  <AREA SHAPE=POLY COORDS="17,53,37,82,23,92,9,93,3,88,1,81,0,69,6,64,15,55" OnMouseOver="rellenar('ele1')" >         
                  <AREA SHAPE=POLY COORDS="40,82,61,65,36,38,18,54" OnMouseOver="rellenar('ele2')" >
                  <AREA SHAPE=POLY COORDS="69,64,39,38,72,10" OnMouseOver="rellenar('ele3')">
@@ -123,7 +125,7 @@
  <!-- imagenes del 2 recorrido -->
   <div class="principal" id="segundo">
      <div class="contenedor">
-         <IMG SRC="./images/uno.png" USEMAP="#uno2.png" WIDTH=111 HEIGHT=227 BORDER=0 style="position:absolute;">
+         <IMG SRC="./images/uno.png" USEMAP="#uno2.png" WIDTH=111 HEIGHT=227 BORDER=0 style="position:absolute;cursor: url(./images/paloma.gif),url(./images/paloma.ani),auto;">
          <IMG SRC="./images/uno01.png" ID="ele10" USEMAP="#uno2.png" class="invisible2">
          <IMG SRC="./images/uno02.png" ID="ele11" USEMAP="#uno2.png" class="invisible2">
          <IMG SRC="./images/uno03.png" ID="ele12" USEMAP="#uno2.png" class="invisible2">
@@ -133,7 +135,7 @@
          <IMG SRC="./images/uno07.png" ID="ele16" USEMAP="#uno2.png" class="invisible2">
          <IMG SRC="./images/uno08.png" ID="ele17" USEMAP="#uno2.png" class="invisible2">
          <IMG SRC="./images/uno09.png" ID="ele18" USEMAP="#uno2.png" class="invisible2">
-             <MAP NAME="uno2.png" style="position:absolute;cursor:url(./images/paloma.ani);">
+             <MAP NAME="uno2.png" style="position:absolute;cursor: url(./images/paloma.gif),url(./images/paloma.ani),auto;">
                  <AREA SHAPE=POLY COORDS="17,53,37,82,23,92,9,93,3,88,1,81,0,69,6,64,15,55" OnMouseOver="rellenar('ele10')" >         
                  <AREA SHAPE=POLY COORDS="40,82,61,65,36,38,18,54" OnMouseOver="rellenar('ele11')" >
                  <AREA SHAPE=POLY COORDS="69,64,39,38,72,10" OnMouseOver="rellenar('ele12')">
@@ -151,7 +153,7 @@
  <!-- imagenes del 3 recorrido -->
   <div class="principal" id="tercero">
      <div class="contenedor">
-         <IMG SRC="./images/uno.png" USEMAP="#uno3.png" WIDTH=111 HEIGHT=227 BORDER=0 style="position:absolute;">
+         <IMG SRC="./images/uno.png" USEMAP="#uno3.png" WIDTH=111 HEIGHT=227 BORDER=0 style="position:absolute;cursor: url(./images/paloma.gif),url(./images/paloma.ani),auto;">
          <IMG SRC="./images/uno01.png" ID="ele19" USEMAP="#uno3.png" class="invisible3">
          <IMG SRC="./images/uno02.png" ID="ele20" USEMAP="#uno3.png" class="invisible3">
          <IMG SRC="./images/uno03.png" ID="ele21" USEMAP="#uno3.png" class="invisible3">
@@ -161,7 +163,7 @@
          <IMG SRC="./images/uno07.png" ID="ele25" USEMAP="#uno3.png" class="invisible3">
          <IMG SRC="./images/uno08.png" ID="ele26" USEMAP="#uno3.png" class="invisible3">
          <IMG SRC="./images/uno09.png" ID="ele27" USEMAP="#uno3.png" class="invisible3">
-             <MAP NAME="uno3.png" style="position:absolute;cursor:url(./images/paloma.ani);">
+             <MAP NAME="uno3.png" style="position:absolute;cursor: url(./images/paloma.gif),url(./images/paloma.ani),auto;">
                  <AREA SHAPE=POLY COORDS="17,53,37,82,23,92,9,93,3,88,1,81,0,69,6,64,15,55" OnMouseOver="rellenar('ele19')" >         
                  <AREA SHAPE=POLY COORDS="40,82,61,65,36,38,18,54" OnMouseOver="rellenar('ele20')" >
                  <AREA SHAPE=POLY COORDS="69,64,39,38,72,10" OnMouseOver="rellenar('ele21')">
